--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,15 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
+node_modules/
+.yarn/
+dist/
 .DS_Store
-dist
 dist-ssr
 coverage
 *.local
-.yarn/
 .pnp.*
+tsconfig.tsbuildinfo
 
 /cypress/videos/
 /cypress/screenshots/
@@ -22,7 +23,7 @@ coverage
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
