--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@types/node": "^18.11.13",
+    "@types/node": "^18.11.15",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/tsconfig": "^0.1.3",
     "npm-run-all": "^4.1.5",
-    "typescript": "^4.8.4",
-    "vite": "^4.0.0",
-    "vue-tsc": "^1.0.12"
+    "typescript": "4.8.4",
+    "vite": "^4.0.1",
+    "vue-tsc": "^1.0.13"
   }
 }
