--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.2.1",
     "uuid": "^9.0.0",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.15",
